--- a/contact.html
+++ b/contact.html
@@ -339,7 +339,7 @@
 
           $.ajax({
             type: "POST",
-            url: "contact_process.php", // Path to your PHP file
+            url: "mailer.php", // Path to your PHP file
             data: $(this).serialize(),
             dataType: "json",
             success: function (response) {
