--- a/contact.html
+++ b/contact.html
@@ -168,6 +168,7 @@
                 name="sentMessage"
                 id="contactForm"
                 method="POST"
+                action="mailer.php"
                 novalidate="novalidate"
               >
                 <div class="control-group">
