--- a/contact.html
+++ b/contact.html
@@ -335,69 +335,57 @@
     <!-- Mailer JavaScript -->
     <script>
       $(document).ready(function () {
-        console.log("Document ready, binding form submit");
-
         $("#contactForm").submit(function (e) {
-          console.log("Form submit triggered");
           e.preventDefault();
 
-          // Validate form is not empty
-          var emptyFields = [];
-          $(this)
-            .find("[required]")
-            .each(function () {
-              if (!$(this).val()) {
-                emptyFields.push($(this).attr("name"));
-              }
-            });
+          var $form = $(this);
+          var $button = $form.find("#sendMessageButton");
+          var $status = $("#success");
 
-          if (emptyFields.length > 0) {
-            console.log("Empty fields:", emptyFields);
-            $("#success").html(
-              '<div class="alert alert-danger">Please fill all required fields</div>'
-            );
-            return false;
-          }
-
-          console.log("Form data:", $(this).serialize());
+          $button.prop("disabled", true).text("Sending...");
 
           $.ajax({
             type: "POST",
-            url: "mailer.php",
-            data: $(this).serialize(),
+            url: $form.attr("action"),
+            data: $form.serialize(),
             dataType: "json",
-            beforeSend: function () {
-              console.log("Sending AJAX request");
-              $("#sendMessageButton").prop("disabled", true).text("Sending...");
-            },
             success: function (response) {
-              console.log("AJAX success:", response);
-              if (response.status === "success") {
-                $("#success").html(
+              if (response && response.status === "success") {
+                $status.html(
                   '<div class="alert alert-success">' +
                     response.message +
                     "</div>"
                 );
-                $("#contactForm")[0].reset();
+                $form[0].reset();
               } else {
-                $("#success").html(
-                  '<div class="alert alert-danger">' +
-                    response.message +
-                    "</div>"
+                var errorMsg =
+                  response && response.message
+                    ? response.message
+                    : "Unknown error occurred";
+                $status.html(
+                  '<div class="alert alert-danger">' + errorMsg + "</div>"
                 );
               }
             },
             error: function (xhr, status, error) {
-              console.log("AJAX error:", status, error);
-              $("#success").html(
-                '<div class="alert alert-danger">An error occurred. Please try again later.</div>'
+              var errorMsg = "An error occurred. Please try again later.";
+
+              // Try to parse the response if it's JSON
+              try {
+                var response = JSON.parse(xhr.responseText);
+                if (response && response.message) {
+                  errorMsg = response.message;
+                }
+              } catch (e) {
+                console.error("Could not parse response:", e);
+              }
+
+              $status.html(
+                '<div class="alert alert-danger">' + errorMsg + "</div>"
               );
             },
             complete: function () {
-              console.log("AJAX complete");
-              $("#sendMessageButton")
-                .prop("disabled", false)
-                .text("Send Message");
+              $button.prop("disabled", false).text("Send Message");
             },
           });
         });
