Fix to services

--- a/contact.html
+++ b/contact.html
@@ -273,7 +273,7 @@
             <a class="text-white mb-2" href="about.html"
               ><i class="fa fa-angle-right mr-2"></i>Our Company</a
             >
-            <a class="text-white mb-2" href="service.html"
+            <a class="text-white mb-2" href="our_services.html"
               ><i class="fa fa-angle-right mr-2"></i>Our Services</a
             >
             <a class="text-white" href="contact.html"
